# fixations

./: README.md  avg_with_total.py  create_json_file_for_fix_version.py  fix_protocol_cheatsheet.txt  fix_tags.py  fix_utils.py  parse_log.py  pyproject.toml  requirements.txt  webfix.py  wsgi.py
data/: additional_fixtags.txt
fix_repository_2010_edition_20200402/FIXT.1.1/Base/: Enums.xml
fixations/: fix_explore.py  fix_parse_log.py  fix_store.py  fix_tags.py  fix_utils.py  short_str_id.py  tiny_string_encoder.py  webfix.py  wsgi.py
fixations/fix_repository_2010_edition_20200402/FIX.5.0SP2/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
fixations/templates/: index.html
fixations/webfix/: webfix.py
fixations/webfix/templates/: index.html
tests/: test_fix_utils.py
