[tool.poetry]
name = "fixations"
version = "0.1.7"
description = "This is a set of tools to handle FIX protocol data"
authors = ["Jerome Provensal <jeromegit@provensal.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["fix", "fix-protol"]
homepage = "https://github.com/jeromegit/fixations"
include = ["fix_repository_2010_edition_20200402"]

[tool.poetry.scripts]
fix_parse_log = 'fixations:fix_parse_log.py'
fix_tags = 'fixations:fix_tags.py'

[tool.poetry.dependencies]
python = "^3.7"
urwid = "^2.1"
termcolor = "2.1.*"
dataclasses-json = "0.5.6"
dataclasses = "0.6"
tabulate = "0.9.0"
flask = "2.2.2"
jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
