[tool.poetry]
name = "fixations"
version = "0.2.0"
description = "This is a set of tools to handle FIX protocol data"
authors = ["Jerome Provensal <jeromegit@provensal.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["fix", "fix-protocol"]
homepage = "https://github.com/jeromegit/fixations"
include = ["fix_repository_2010_edition_20200402"]

[tool.poetry.scripts]
fix_parse_log = 'fixations:fix_parse_log.py'
fix_tags = 'fixations:fix_tags.py'

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
