[tool.poetry]
name = "fixations"
version = "0.2.22"
description = "This is a set of tools to look up / visualize FIX protocol data"
authors = ["Jerome Provensal <jeromegit@provensal.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["fix", "fix-protocol"]
homepage = "https://github.com/jeromegit/fixations"
include = ["fix_repository_2010_edition_20200402"]

[tool.poetry.scripts]
fix_parse_log = 'fixations.fix_parse_log:main'
fix_tags = 'fixations.fix_tags:main'
webfix = 'fixations.webfix:main'

[tool.poetry.dependencies]
python = ">=3.7"
flask = "^2.2.2"
gunicorn = "^20.1.0"
tabulate = "^0.9.0"
urwid = "^2.1.2"
termcolor = "^2.1.1"
dataclasses-json = "^0.5.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
